# AiOS

./: .env.example  .gitignore  CLEANUP_REPORT.md  COMMANDS.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  INDEX.md  MASTER_RUN.sh  MOBILE_GUIDE.md  PHASE3_SUMMARY.md  PHASE5_AUDIT.py  PHASE5_SUMMARY.md  QUICK_START.md  README.md  RUN_PROJECT.sh  TELEGRAM_SETUP.md  TESTING_GUIDE.md  docker-compose.yml  docker-lite  docker-lite.py  pyproject.toml  requirements.txt  start_bot.sh
agents/: hermes.py
agents/hermes/: __init__.py  agent.py  concrete_agents.py  orchestrator.py  registry.py  task.py
bot_service/: __init__.py  __main__.py  bot.py
configs/: providers.json  providers.yaml
scripts/: bootstrap.sh  git-commit.sh  git-push.sh  git-sync.sh  test_hermes_workflow.py  test_llm_integration.py
services/: llm.py
services/llm/: __init__.py  base.py  client.py  manager.py  providers.py
telegram/: bot.py
tests/: test_llm.py
webui/: __init__.py  app.py
webui/templates/: agents.html  index.html  providers.html
