[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aios"
version = "0.1.0"
description = "Autonomous AI Operating System for Termux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.28.1",
    "requests==2.34.2",
    "rich==15.0.0",
    "typer==0.26.4",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
]

[tool.uv]
python-version = "3.13"
